c11m4 removed metal detector event c10m1 removed added ladder to get on cliff that did not spawn for both teams due to a bug #36 c8m4 removed added ladder in the lobby that did not spawn for both teams due to a bug #36 c8m4 removed a ladder on the scaffolding after the elevator that did not spawn for both teams due to a bug #36

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -176,11 +176,12 @@ add:
 	"normal.z" "[z.00]"
 	"team" "2"
 }
+; --- NOTE: Ladder name does not seem to be preserved between rounds, so the below does not work
 ; --- To fix issues with cloned ladders that go beyond the maps limit (origin on any axis greater than 16384), create a prop and parent the ladder to it
-{
-	"classname" "logic_auto"
-	"OnMapSpawn" "[ladder name],SetParent,[prop name],0,-1"
-}
+;{
+;	"classname" "logic_auto"
+;	"OnMapSpawn" "[ladder name],SetParent,[prop name],0,-1"
+;}
 
 ; #####################  BRUSHES  #####################
 ; --- Create custom sized brushes by using a logic_auto to fire outputs for parameters
