--- a/cfg/stripper/maps/c10m1_caves.cfg
+++ b/cfg/stripper/maps/c10m1_caves.cfg
@@ -825,31 +825,31 @@ add:
 ; =====================================================
 add:
 ; --- Infected ladder to climb on the cliff above the saferoom at the bridge
-{
-	"classname" "func_simpleladder"
-	"origin" "-24773 -22719.99 -566.85"
-	"angles" "0 180 -5"
-	"model" "*71"
-	"normal.x" "0.00"
-	"normal.y" "0.99"
-	"normal.z" "0.08"
-	"team" "2"
-	"targetname" "saferoom_cliff_ladder"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-11441 -11694 190"
-	"angles" "0 0 0"
-	"model" "models/props_rooftop/gutter_pipe_128.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-	"rendermode" "10"
-	"targetname" "saferoom_cliff_ladder_prop"
-}
-{
-	"classname" "logic_auto"
-	"OnMapSpawn" "saferoom_cliff_ladder,SetParent,saferoom_cliff_ladder_prop,0,-1"
-}
+;{
+;	"classname" "func_simpleladder"
+;	"origin" "-24773 -22719.99 -566.85"
+;	"angles" "0 180 -5"
+;	"model" "*71"
+;	"normal.x" "0.00"
+;	"normal.y" "0.99"
+;	"normal.z" "0.08"
+;	"team" "2"
+;	"targetname" "saferoom_cliff_ladder"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "-11441 -11694 190"
+;	"angles" "0 0 0"
+;	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+;	"solid" "0"
+;	"disableshadows" "1"
+;	"rendermode" "10"
+;	"targetname" "saferoom_cliff_ladder_prop"
+;}
+;{
+;	"classname" "logic_auto"
+;	"OnMapSpawn" "saferoom_cliff_ladder,SetParent,saferoom_cliff_ladder_prop,0,-1"
+;}
 ; --- Fix getting knocked off infected ladder on cliff by the bridge
 modify:
 {
