--- a/cfg/stripper/maps/c11m4_terminal.cfg
+++ b/cfg/stripper/maps/c11m4_terminal.cfg
@@ -16,78 +16,15 @@ filter:
 {
 	"classname" "info_zombie_spawn"
 }
-; --- Load a modified version of the event script
-modify:
+; --- Remove the metal detector event
 {
-	match:
-	{
-		"targetname" "alarm_on_relay"
-	}
-	delete:
-	{
-		"OnTrigger" "@directorBeginScriptc11m4_onslaught0.1-1"
-	}
-	insert:
-	{
-		"OnTrigger" "@director,BeginScript,c11m4_onslaught_rework,0.1,-1"
-	}
-}
-; --- Button to stop the metal detector event early
-modify:
-{
-	match:
-	{
-		"targetname" "alarm_on_relay"
-	}
-	insert:
-	{
-		; --- Make the button start glowing
-		"OnTrigger" "event_security_desk_prop,StartGlowing,,0,-1"
-	}
-}
-add:
-{
-	"classname" "prop_dynamic"
-	"origin" "3145 3089 152"
-	"angles" "0 180 0"
-	"model" "models/props_equipment/security_desk1.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"targetname" "event_security_desk_prop"
-	"glowrangemin" "160"
+	"targetname" "securityalarmtrigger1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "3148 3096 187"
-	"angles" "0 180 0"
-	"model" "models/props_fairgrounds/gallery_button.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-	"targetname" "event_security_desk_button_prop"
-	"DefaultAnim" "idle"
-	"HoldAnimation" "1"
-}
-{
-	"classname" "script_func_button"
-	"origin" "3140 3089 193"
-	"angles" "0 0 0"
-	"extent" "7 11 7"
-	"spawnflags" "1025"
-	"wait" "-1"
-	"sounds" "10"
-	"targetname" "event_security_desk_button"
-	"glow" "event_security_desk_button_prop"
-	; --- Animate button press
-	"OnPressed" "event_security_desk_button_prop,SetAnimation,on,0,-1"
-	; --- Stop event
-	"OnPressed" "@director,EndScript,,0,-1"
-	; --- Stop glow
-	"OnPressed" "event_security_desk_prop,StopGlowing,,0,-1"
-	"OnPressed" "event_security_desk_button_prop,StopGlowing,,0,-1"
-	; --- Stop event visuals
-	"OnPressed" "alarm_off_relay,Trigger,,0,-1"
+	"targetname" "onslaught_hint_trigger"
 }
 ; --- Stop the metal detector event once survivors reach the saferoom
+add:
 {
 	"classname" "logic_auto"
 	"OnMapSpawn" "event_stop_trigger,AddOutput,mins -9 -33 -70,0,-1"
