--- a/cfg/stripper/maps/c4m2_sugarmill_a.cfg
+++ b/cfg/stripper/maps/c4m2_sugarmill_a.cfg
@@ -1373,6 +1373,17 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
+; --- Infected ladder to climb up at the ramp drop
+{
+	"classname" "func_simpleladder"
+	"origin" "-581.34 -9798.38 -6.25"
+	"angles" "0 90 0"
+	"model" "*148"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Infected ladder to get on the gas station roof from the street without jumping over props
 {
 	"classname" "func_simpleladder"
@@ -1385,16 +1396,6 @@ add:
 	"team" "2"
 }
 ; --- Survivor ladder at the back of the gas station to get on the roof
-;{
-;	"classname" "func_simpleladder"
-;	"origin" "5595 -14414 -38"
-;	"angles" "0 270 0"
-;	"model" "*13"
-;	"normal.x" "-1.00"
-;	"normal.y" "0.00"
-;	"normal.z" "0.00"
-;	"team" "0"
-;}
 {
 	"classname" "prop_dynamic"
 	"origin" "-1586 -13843 234"
