--- a/cfg/stripper/maps/c8m4_interior.cfg
+++ b/cfg/stripper/maps/c8m4_interior.cfg
@@ -32,6 +32,17 @@ add:
 	"spawnflags" "2"
 	"count" "5"
 }
+; --- Ammo pile after the elevator
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "13329 14821 5536"
+	"angles" "0 270 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 
 ; =====================================================
 ; ==                 HITTABLE CHANGES                ==
@@ -234,42 +245,25 @@ modify:
 ; ==              Add or change ladders              ==
 ; =====================================================
 add:
-; --- Infected ladder on other side of the lobby
-{
-	"classname" "func_simpleladder"
-	"origin" "27402 -639.49 -212"
-	"angles" "0 90 0"
-	"model" "*140"
-	"normal.x" "0.00"
-	"normal.y" "-1.00"
-	"normal.z" "0.00"
-	"team" "2"
-	"targetname" "ladder_lobby_mirrored"
-}
-{
-	"classname" "func_simpleladder"
-	"origin" "27402 -639.49 -308"
-	"angles" "0 90 0"
-	"model" "*140"
-	"normal.x" "0.00"
-	"normal.y" "-1.00"
-	"normal.z" "0.00"
-	"team" "2"
-	"targetname" "ladder_lobby_mirrored"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "12298 12287 408"
-	"angles" "0 0 0"
-	"model" "models/props_rooftop/gutter_pipe_256.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-	"targetname" "ladder_lobby_mirrored_prop"
-}
-{
-	"classname" "logic_auto"
-	"OnMapSpawn" "ladder_lobby_mirrored,SetParent,ladder_lobby_mirrored_prop,0,-1"
-}
+; --- Infected ladder on other side of the lobby - Goes through the floor, no other ladder is usable without requiring SetParent
+;{
+;	"classname" "func_simpleladder"
+;	"origin" "41 -591 -128"
+;	"angles" "0 0 0"
+;	"model" "*53"
+;	"normal.x" "0.00"
+;	"normal.y" "1.00"
+;	"normal.z" "0.00"
+;	"team" "2"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "12337 12016 288"
+;	"angles" "0 180 0"
+;	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+;	"solid" "0"
+;	"disableshadows" "1"
+;}
 ; --- Infected ladder to climb into collapsed ceiling by the elevator
 {
 	"classname" "func_simpleladder"
@@ -300,30 +294,30 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
-{
-	"classname" "func_simpleladder"
-	"origin" "25718 26875.5 5218"
-	"angles" "0 180 0"
-	"model" "*53"
-	"normal.x" "0.00"
-	"normal.y" "-1.00"
-	"normal.z" "0.00"
-	"team" "2"
-	"targetname" "ladder_scaffolding_reverseside"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "13426 14296 5628"
-	"angles" "-90 90 0"
-	"model" "models/props_highway/scaffolding_96_railing.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-	"targetname" "ladder_scaffolding_reverseside_prop"
-}
-{
-	"classname" "logic_auto"
-	"OnMapSpawn" "ladder_scaffolding_reverseside,SetParent,ladder_scaffolding_reverseside_prop,0,-1"
-}
+;{
+;	"classname" "func_simpleladder"
+;	"origin" "25718 26875.5 5218"
+;	"angles" "0 180 0"
+;	"model" "*53"
+;	"normal.x" "0.00"
+;	"normal.y" "-1.00"
+;	"normal.z" "0.00"
+;	"team" "2"
+;	"targetname" "ladder_scaffolding_reverseside"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "13426 14296 5628"
+;	"angles" "-90 90 0"
+;	"model" "models/props_highway/scaffolding_96_railing.mdl"
+;	"solid" "0"
+;	"disableshadows" "1"
+;	"targetname" "ladder_scaffolding_reverseside_prop"
+;}
+;{
+;	"classname" "logic_auto"
+;	"OnMapSpawn" "ladder_scaffolding_reverseside,SetParent,ladder_scaffolding_reverseside_prop,0,-1"
+;}
 
 ; #######  MISCELLANEOUS / MAP SPECIFIC CHANGES  ######
 ; =====================================================
