c12m4 replaced car transporter on bridge with a train car

--- a/cfg/stripper/maps/c12m4_barn.cfg
+++ b/cfg/stripper/maps/c12m4_barn.cfg
@@ -509,53 +509,20 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
-; --- Car transporter on bridge after ore car
+; --- Train car after the ore car
 {
 	"classname" "prop_dynamic"
-	"origin" "10452 -2979 -63"
+	"origin" "10452 -2823 -63"
 	"angles" "0 270 0"
-	"model" "models/props_trainstation/train_transporter.mdl"
+	"model" "models/props_vehicles/train_box_small.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"rendercolor" "170 204 197"
 }
-; --- Clipping on transporter
-{
-	"classname" "env_physics_blocker"
-	"origin" "10452 -2961 79"
-	"mins" "-20 -249 -2.5"
-	"maxs" "20 249 2.5"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "10452 -3219 83"
-	"mins" "-60 -12 -6.5"
-	"maxs" "60 12 6.5"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-; --- Cars by the transporter
+; --- Car before the scaffolding
 {
 	"classname" "prop_dynamic"
-	"origin" "10452 -2899 78"
-	"angles" "0 270 0"
-	"model" "models/props_vehicles/cara_82hatchback.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendercolor" "43 97 187"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "10452 -2899 78"
-	"angles" "0 270 0"
-	"model" "models/props_vehicles/cara_82hatchback_glass.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "10481 -2369 -64"
+	"origin" "10481 -2305 -64"
 	"angles" "0 263.5 0"
 	"model" "models/props_vehicles/cara_95sedan.mdl"
 	"solid" "6"
@@ -564,32 +531,13 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "10481 -2369 -64"
+	"origin" "10481 -2305 -64"
 	"angles" "0 263.5 0"
 	"model" "models/props_vehicles/cara_95sedan_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Survivor ladder at the end of the transporter
-{
-	"classname" "func_simpleladder"
-	"origin" "3489 -13217 -13"
-	"angles" "0 90 0"
-	"model" "*2"
-	"normal.x" "0.00"
-	"normal.y" "1.00"
-	"normal.z" "0.00"
-	"team" "0"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "10491 -2706 -52"
-	"angles" "0 180 0"
-	"model" "models/props_vehicles/train_ladder.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-}
-; --- Flat train car after the car transporter
+; --- Flat train car by the scaffolding
 {
 	"classname" "prop_dynamic"
 	"origin" "10427 -1774 -63"
