--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -214,6 +214,7 @@ add:
 }
 ; --- Trigger brushes
 ; --- NOTE: Not all brushes require the boxmins/boxmaxs to be specified, but some brush types such as teleport triggers will not work without them
+add:
 {
 	"classname" "logic_auto"
 	"OnMapSpawn" "[trigger name],AddOutput,mins [-x -y -z],0,-1"
@@ -230,9 +231,10 @@ add:
 	"spawnflags" "1"
 	; --- Trigger event output here
 }
-; --- VPhysics Clips
+; --- VPhysics clips
 ; --- NOTE: Extent defines the mins AND maxs of the brush
 ; --- NOTE: Brush will not function unless StartDisabled is set to 0, or the brush is enabled by firing an Enable output
+add:
 {
 	"classname" "script_clip_vphysics"
 	"origin" "[x y z]"
@@ -240,6 +242,20 @@ add:
 	"extent" "[x y z]"
 	"filtername" "filter_gascan"
 	"StartDisabled" "0"
+}
+; --- Force movement state trigger
+; --- Flags: 1 = Clients (should always be on), 2048 = Crouch, 4096 = Walk, 8192 = Jump
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "[trigger name],AddOutput,mins [-x -y -z],0,-1"
+	"OnMapSpawn" "[trigger name],AddOutput,maxs [x y z],0,-1"
+	"OnMapSpawn" "[trigger name],AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "trigger_playermovement"
+	"origin" "[x y z]"
+	"targetname" "[trigger name]"
+	"spawnflags" "2049"
 }
 
 ; ####################  I/O LOGIC  ####################
