c2m3 removed railings and plant pots from coaster saferoom c2m3 adjusted bins by the saferoom c7m1 adjusted clipping on cooling tank in saferoom c7m1 blocked being able to stand in tree by traincar c7m1+2+3 Added missing glass to vehicles c7m2 Infected ladder to climb on top of the grounded boat in the open water area c7m2 Infected ladders to climb up from inside the barge c7m3 solidified awning on the store c6m3 solidified awning on the store added global filter for witch bride spawns Completed work on Cold Stream Updated mapinfo to new syntax (https://github.com/SirPlease/L4D2-Competitive-Rework/pull/354)

--- a/cfg/stripper/maps/c13m1_alpinecreek.cfg
+++ b/cfg/stripper/maps/c13m1_alpinecreek.cfg
@@ -3,88 +3,52 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
-add:
-; --- Fix scavenge spawn positions when using thesaccing addon, as the spawn points use the L4D1 survivor names but the addon spawns L4D2 survivors
+; --- Remove scripted common spawns from the event
+filter:
 {
-	"classname" "info_survivor_position"
-	"origin" "6089.54 342.04 146.017"
-	"angles" "0 195 0"
-	"targetname" "scavenge_position3"
-	"SurvivorName" "Rochelle"
-	"Order" "1"
-	"GameMode" "scavenge"
+	"classname" "info_zombie_spawn"
 }
-{
-	"classname" "info_survivor_position"
-	"origin" "6077.26 256.76 149.017"
-	"angles" "0 195 0"
-	"targetname" "scavenge_position4"
-	"SurvivorName" "Ellis"
-	"Order" "1"
-	"GameMode" "scavenge"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "6147.4 267.4 150.017"
-	"angles" "0 180 0"
-	"targetname" "scavenge_position2"
-	"SurvivorName" "Nick"
-	"Order" "1"
-	"GameMode" "scavenge"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "6139.4 315.4 149.017"
-	"angles" "0 180 0"
-	"targetname" "scavenge_position1"
-	"SurvivorName" "Coach"
-	"Order" "1"
-	"GameMode" "scavenge"
-}
-; --- Add L4D2 survivor spawn positions to the saferoom, as thesaccing.vpk causes L4D2 survivors to be used when transitioning to this map
-{
-	"classname" "info_survivor_position"
-	"origin" "13915 2567 32.2028"
-	"angles" "0 270 0"
-	"targetname" "survivorPos_intro_01"
-	"SurvivorName" "Nick"
-	"Order" "1"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "13864.5 2593.2 32.2028"
-	"angles" "0 270 0"
-	"targetname" "survivorPos_intro_02"
-	"SurvivorName" "Rochelle"
-	"Order" "1"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "13806.5 2583 33"
-	"angles" "0 270 0"
-	"targetname" "survivorPos_intro_03"
-	"SurvivorName" "Coach"
-	"Order" "1"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "13765.1 2545 33"
-	"angles" "0 270 0"
-	"targetname" "survivorPos_intro_04"
-	"SurvivorName" "Ellis"
-	"Order" "1"
-}
-; --- Automatically open the 2nd train car door 20 seconds after the first one is opened
+; --- Make the bunker door open with a single button press
 modify:
 {
 	match:
 	{
-		"targetname" "tankdoorin_button"
+		"targetname" "bunker_button"
+	}
+	replace:
+	{
+		"use_time" "0.5"
+	}
+	delete:
+	{
+		"OnTimeUp" "move_doorStop0-1"
+		"OnUnPressed" "door_move_soundStopSound0-1"
+		"OnUnPressed" "move_doorStop0-1"
+		"OnUnPressed" "bunker_dustStop0-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "position_02"
 	}
 	insert:
 	{
-		"OnTimeUp" "tankdoorout,Open,,20,-1"
-		"OnTimeUp" "tankdoorout_button,Kill,,20,-1"
+		"OnPass" "bunker_button,Kill,,0,-1"
+		"OnPass" "move_door,Stop,,0,-1"
+		"OnPass" "door_move_sound,StopSound,,0,-1"
+		"OnPass" "bunker_dust,Stop,,0,-1"
+	}
+}
+; --- Make the glow on the button line up with the handles
+{
+	match:
+	{
+		"targetname" "bunker_slide_door"
+	}
+	replace:
+	{
+		"origin" "1056 -100 702"
 	}
 }
 
@@ -105,10 +69,10 @@ modify:
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
 add:
-; --- Ammo pile in the brick factory, by the front loader
+; --- Ammo pile by the radio tower
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "3580 1337 0"
+	"origin" "-2517 3390 653"
 	"angles" "0 0 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
@@ -128,33 +92,6 @@ add:
 ; ==                 EXPLOITS BLOCKED                ==
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
-add:
-; --- Block survivors from being able to stand on a tree by the train car tank
-{
-	"classname" "env_physics_blocker"
-	"origin" "7697 -317 632"
-	"mins" "-22 -16 -392"
-	"maxs" "22 16 392"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "7606 -284 632"
-	"mins" "-34 -44 -392"
-	"maxs" "34 44 392"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "7583 -347 648"
-	"mins" "-34 -22 -376"
-	"maxs" "34 22 376"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-
 
 ; =====================================================
 ; ==                  OUT OF BOUNDS                  ==
@@ -165,50 +102,34 @@ add:
 ; ==                   STUCK SPOTS                   ==
 ; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
+add:
+; --- Block a perma-stuck spot by the end of the map
+{
+	"classname" "env_physics_blocker"
+	"origin" "1976 -440 712"
+	"mins" "-72 -72 -136"
+	"maxs" "72 72 136"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 
 ; =====================================================
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
-add:
-; --- Clipping on fence leaning on the cooling tank in saferoom to stop players getting stuck
+; --- Allow the window in the radio tower to be broken by anyone
+modify:
 {
-	"classname" "env_physics_blocker"
-	"origin" "13848 2329 -4"
-	"angles" "0 10 0"
-	"mins" "-50 -10 -8"
-	"maxs" "50 10 8"
-	"boxmins" "-50 -10 -8"
-	"boxmaxs" "50 10 8"
-	"initialstate" "1"
-	"BlockType" "0"
+	match:
+	{
+		"hammerid" "894075"
+	}
+	replace:
+	{
+		"BreakableType" "0"
+	}
 }
-; --- Add missing glass to vehicles
-{
-	"classname" "prop_dynamic"
-	"origin" "12951 2247 -60"
-	"angles" "0 33.5 0"
-	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "10659 1637.6 219"
-	"angles" "-12.1868 222.739 167.835"
-	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "8492.13 1654.53 190.719"
-	"angles" "2.02148 251.631 -177.935"
-	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"parentname" "car_burning"
-}
+
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
 ; =====================================================
@@ -244,6 +165,11 @@ add:
 ; ==              TRIGGER REMOVAL / FIX              ==
 ; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
+; --- Remove the forced walking on the log
+filter:
+{
+	"classname" "trigger_playermovement"
+}
 
 
 ; #############  LADDER CHANGES AND FIXES  ############
@@ -251,18 +177,6 @@ add:
 ; ==             LADDER ADDITIONS / FIXES            ==
 ; ==              Add or change ladders              ==
 ; =====================================================
-add:
-; --- Infected ladder to climb on slanted roof by the burning barricade
-{
-	"classname" "func_simpleladder"
-	"origin" "4105 2033 64"
-	"angles" "0 0 0"
-	"model" "*27"
-	"normal.x" "1.00"
-	"normal.y" "0.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
 
 
 ; #######  MISCELLANEOUS / MAP SPECIFIC CHANGES  ######
