--- a/cfg/stripper/maps/c13m4_cutthroatcreek.cfg
+++ b/cfg/stripper/maps/c13m4_cutthroatcreek.cfg
@@ -3,89 +3,10 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
-add:
-; --- Fix scavenge spawn positions when using thesaccing addon, as the spawn points use the L4D1 survivor names but the addon spawns L4D2 survivors
+; --- Remove the escape tank
+filter:
 {
-	"classname" "info_survivor_position"
-	"origin" "6089.54 342.04 146.017"
-	"angles" "0 195 0"
-	"targetname" "scavenge_position3"
-	"SurvivorName" "Rochelle"
-	"Order" "1"
-	"GameMode" "scavenge"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "6077.26 256.76 149.017"
-	"angles" "0 195 0"
-	"targetname" "scavenge_position4"
-	"SurvivorName" "Ellis"
-	"Order" "1"
-	"GameMode" "scavenge"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "6147.4 267.4 150.017"
-	"angles" "0 180 0"
-	"targetname" "scavenge_position2"
-	"SurvivorName" "Nick"
-	"Order" "1"
-	"GameMode" "scavenge"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "6139.4 315.4 149.017"
-	"angles" "0 180 0"
-	"targetname" "scavenge_position1"
-	"SurvivorName" "Coach"
-	"Order" "1"
-	"GameMode" "scavenge"
-}
-; --- Add L4D2 survivor spawn positions to the saferoom, as thesaccing.vpk causes L4D2 survivors to be used when transitioning to this map
-{
-	"classname" "info_survivor_position"
-	"origin" "13915 2567 32.2028"
-	"angles" "0 270 0"
-	"targetname" "survivorPos_intro_01"
-	"SurvivorName" "Nick"
-	"Order" "1"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "13864.5 2593.2 32.2028"
-	"angles" "0 270 0"
-	"targetname" "survivorPos_intro_02"
-	"SurvivorName" "Rochelle"
-	"Order" "1"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "13806.5 2583 33"
-	"angles" "0 270 0"
-	"targetname" "survivorPos_intro_03"
-	"SurvivorName" "Coach"
-	"Order" "1"
-}
-{
-	"classname" "info_survivor_position"
-	"origin" "13765.1 2545 33"
-	"angles" "0 270 0"
-	"targetname" "survivorPos_intro_04"
-	"SurvivorName" "Ellis"
-	"Order" "1"
-}
-; --- Automatically open the 2nd train car door 20 seconds after the first one is opened
-modify:
-{
-	match:
-	{
-		"targetname" "tankdoorin_button"
-	}
-	insert:
-	{
-		"OnTimeUp" "tankdoorout,Open,,20,-1"
-		"OnTimeUp" "tankdoorout_button,Kill,,20,-1"
-	}
+	"hammerid" "2081551"
 }
 
 
@@ -99,17 +20,83 @@ modify:
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+; --- Remove item spawns through the map
+filter:
+{
+	"classname" "weapon_item_spawn"
+}
+; --- Add 2 guaranteed pill spawns by the tank drop
+add:
+{
+	"classname" "weapon_pain_pills_spawn"
+	"origin" "-1819 -1996 -255"
+	"angles" "0 0 0"
+	"spawnflags" "2"
+}
+{
+	"classname" "weapon_pain_pills_spawn"
+	"origin" "-1780 -1972 -255"
+	"angles" "0 0 0"
+	"spawnflags" "2"
+}
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
+; --- Replacement ammo piles (since they are spawned through weapon_item_spawn)
+filter:
+{
+	"hammerid" "2012267"
+}
+{
+	"hammerid" "2010044"
+}
+{
+	"hammerid" "2438432"
+}
+{
+	"hammerid" "2469309"
+}
 add:
-; --- Ammo pile in the brick factory, by the front loader
+; --- By the finale start
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "3580 1337 0"
+	"origin" "-4128 -7885 371"
 	"angles" "0 0 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+; --- By the one way drop
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "-1528 -1882 -269"
+	"angles" "0 0 -5"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+; --- At the end of the tunnel
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "-745 1931 -361"
+	"angles" "12.5 0 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+; --- After the tunnel
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "-1305 3844 -118"
+	"angles" "12.5 0 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -121,6 +108,26 @@ add:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
+; --- Remove the original hittable log
+filter:
+{
+	"hammerid" "2735671"
+}
+; --- Remove TLS hittable log
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_hittable_replacement,Kill,,15,-1"
+}
+; --- Add a new log on top of the cliff
+{
+	"classname" "prop_physics"
+	"origin" "54 -590 143"
+	"angles" "0 86 0"
+	"model" "models/props_foliage/tree_trunk_fallen.mdl"
+	"solid" "6"
+	"fadescale" "0"
+}
 
 
 ; #############  MAP CLIPPING AND ISSUES  #############
@@ -128,33 +135,6 @@ add:
 ; ==                 EXPLOITS BLOCKED                ==
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
-add:
-; --- Block survivors from being able to stand on a tree by the train car tank
-{
-	"classname" "env_physics_blocker"
-	"origin" "7697 -317 632"
-	"mins" "-22 -16 -392"
-	"maxs" "22 16 392"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "7606 -284 632"
-	"mins" "-34 -44 -392"
-	"maxs" "34 44 392"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "7583 -347 648"
-	"mins" "-34 -22 -376"
-	"maxs" "34 22 376"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-
 
 ; =====================================================
 ; ==                  OUT OF BOUNDS                  ==
@@ -171,44 +151,35 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 add:
-; --- Clipping on fence leaning on the cooling tank in saferoom to stop players getting stuck
-{
-	"classname" "env_physics_blocker"
-	"origin" "13848 2329 -4"
-	"angles" "0 10 0"
-	"mins" "-50 -10 -8"
-	"maxs" "50 10 8"
-	"boxmins" "-50 -10 -8"
-	"boxmaxs" "50 10 8"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-; --- Add missing glass to vehicles
+; --- Solidify trash bags
 {
 	"classname" "prop_dynamic"
-	"origin" "12951 2247 -60"
-	"angles" "0 33.5 0"
-	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
+	"origin" "-836 2341 -103"
+	"angles" "0 179.413 0"
+	"model" "models/props_junk/trashcluster01b.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"rendermode" "10"
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "10659 1637.6 219"
-	"angles" "-12.1868 222.739 167.835"
-	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
+	"origin" "-1209 4012 -108"
+	"angles" "0 41 0"
+	"model" "models/props_junk/trashcluster01b.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"rendermode" "10"
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "8492.13 1654.53 190.719"
-	"angles" "2.02148 251.631 -177.935"
-	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
+	"origin" "-940 4270 -112"
+	"angles" "0 44.5 0"
+	"model" "models/props_junk/trashcluster01b.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"parentname" "car_burning"
+	"rendermode" "10"
 }
+
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
 ; =====================================================
@@ -227,11 +198,24 @@ add:
 ; ==                  SOUND REMOVAL                  ==
 ; ==    Remove or adjust sounds played by the map    ==
 ; =====================================================
+; --- Remove chopper sounds
+filter:
+{
+	"targetname" "chopper_dummy_sound"
+}
+{
+	"targetname" "chopper_landed_sound"
+}
 
 ; =====================================================
 ; ==             GFX / PARTICLES REMOVAL             ==
 ; ==        Remove visual effects from the map       ==
 ; =====================================================
+; --- Remove smoke particles
+filter:
+{
+	"classname" "func_precipitation"
+}
 
 
 ; ###############  TRIGGERS AND BRUSHES  ##############
@@ -244,6 +228,14 @@ add:
 ; ==              TRIGGER REMOVAL / FIX              ==
 ; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
+; --- Remove infected kill/push triggers by the helicopter
+filter:
+{
+	"targetname" "push_away_zombies"
+}
+{
+	"targetname" "push_away_ladder"
+}
 
 
 ; #############  LADDER CHANGES AND FIXES  ############
@@ -251,18 +243,6 @@ add:
 ; ==             LADDER ADDITIONS / FIXES            ==
 ; ==              Add or change ladders              ==
 ; =====================================================
-add:
-; --- Infected ladder to climb on slanted roof by the burning barricade
-{
-	"classname" "func_simpleladder"
-	"origin" "4105 2033 64"
-	"angles" "0 0 0"
-	"model" "*27"
-	"normal.x" "1.00"
-	"normal.y" "0.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
 
 
 ; #######  MISCELLANEOUS / MAP SPECIFIC CHANGES  ######
