--- a/cfg/stripper/maps/c6m3_port.cfg
+++ b/cfg/stripper/maps/c6m3_port.cfg
@@ -153,6 +153,17 @@ modify:
 		"spawnflags" "33"
 	}
 }
+; --- Solidify awning on store at the top of the ramp
+add:
+{
+	"classname" "prop_dynamic"
+	"origin" "607.7 1759.75 296.467"
+	"angles" "0 180.0 0"
+	"model" "models/props_street/awning_department_store.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
