--- a/cfg/stripper/maps/c7m2_barge.cfg
+++ b/cfg/stripper/maps/c7m2_barge.cfg
@@ -164,6 +164,34 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 add:
+; --- Add missing glass to vehicles
+{
+	"classname" "prop_dynamic"
+	"origin" "7525.16 2209.41 165.906"
+	"angles" "20.3906 217.705 171.782"
+	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"parentname" "car43"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "765.795 1996 -75.7"
+	"angles" "-1.08923 10.8918 13.1158"
+	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"parentname" "car44"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-10090.6 2016.63 187.531"
+	"angles" "2.02148 215.42 -177.891"
+	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"parentname" "car05"
+}
 ; --- Clipping on fallen lamp post before open water section to stop players from getting stuck
 {
 	"classname" "env_physics_blocker"
@@ -255,28 +283,6 @@ filter:
 ; ==              TRIGGER REMOVAL / FIX              ==
 ; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
-; --- Reduce the amount of slowdown on the gravel pile
-;add:
-;{
-;	"classname" "player_speedmod"
-;	"targetname" "gravel_speed_mod"
-;}
-;modify:
-;{
-;	match:
-;	{
-;		"targetname" "gravelpile_playermovement"
-;	}
-;	replace:
-;	{
-;		"classname" "trigger_multiple"
-;	}
-;	insert:
-;	{
-;		"OnStartTouch" "gravel_speed_mod,ModifySpeed,0.5,0"
-;		"OnEndTouch" "gravel_speed_mod,ModifySpeed,1,0"
-;	}
-;}
 filter:
 ; --- Remove forced slow movement on the gravel pile
 ;{
@@ -315,6 +321,83 @@ add:
 	"normal.y" "-0.11"
 	"normal.z" "0.00"
 	"team" "2"
+}
+; --- Infected ladder to climb on top of the grounded boat in the open water area
+{
+	"classname" "func_simpleladder"
+	"origin" "548.83 3927.99 442.87"
+	"angles" "6 -105 -22"
+	"model" "*213"
+	"normal.x" "0.25"
+	"normal.y" "0.96"
+	"normal.z" "0.10"
+	"team" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "800 1108 51"
+	"angles" "-27.2584 164.511 -6.97386"
+	"mins" "-28 -12 -120"
+	"maxs" "28 12 120"
+	"boxmins" "-28 -12 -120"
+	"boxmaxs" "28 12 120"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+; --- Infected ladders to climb up from inside the barge
+{
+	"classname" "func_simpleladder"
+	"origin" "-7399.55 -3104.7 -271"
+	"angles" "0 5 0"
+	"model" "*17"
+	"normal.x" "-0.08"
+	"normal.y" "0.99"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5501 -947 67"
+	"angles" "0 185 0"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-4166.44 1662.7 -271"
+	"angles" "0 185 0"
+	"model" "*17"
+	"normal.x" "0.08"
+	"normal.y" "-0.99"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6066 -494 67"
+	"angles" "0 5 0"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-8680.55 -3215.7 -271"
+	"angles" "0 5 0"
+	"model" "*17"
+	"normal.x" "-0.08"
+	"normal.y" "0.99"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6782 -1059 67"
+	"angles" "0 185 0"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 ; --- Infected ladder to get on the higher part of a roof by the end saferoom
 {
