--- a/cfg/stripper/maps/c7m3_port.cfg
+++ b/cfg/stripper/maps/c7m3_port.cfg
@@ -137,7 +137,26 @@ modify:
 		"spawnflags" "33"
 	}
 }
-
+; --- Add missing glass to vehicles
+add:
+{
+	"classname" "prop_dynamic"
+	"origin" "1279.3 3009.6 124.008"
+	"angles" "-0.560039 183.491 0.967657"
+	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Solidify awning on store at the top of the ramp
+{
+	"classname" "prop_dynamic"
+	"origin" "607.7 1759.75 296.467"
+	"angles" "0 180.0 0"
+	"model" "models/props_street/awning_department_store.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
 ; =====================================================
