--- a/cfg/stripper/maps/c13m1_alpinecreek.cfg
+++ b/cfg/stripper/maps/c13m1_alpinecreek.cfg
@@ -40,17 +40,6 @@ modify:
 		"OnPass" "bunker_dust,Stop,,0,-1"
 	}
 }
-; --- Make the glow on the button line up with the handles
-{
-	match:
-	{
-		"targetname" "bunker_slide_door"
-	}
-	replace:
-	{
-		"origin" "1056 -100 702"
-	}
-}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -127,6 +116,17 @@ modify:
 	replace:
 	{
 		"BreakableType" "0"
+	}
+}
+; --- Make the glow on the event button line up with the handles
+{
+	match:
+	{
+		"targetname" "bunker_slide_door"
+	}
+	replace:
+	{
+		"origin" "1056 -100 702"
 	}
 }
 
