--- a/cfg/stripper/maps/c13m2_southpinestream.cfg
+++ b/cfg/stripper/maps/c13m2_southpinestream.cfg
@@ -216,7 +216,7 @@ add:
 ; ==  Block players getting outside / under the map  ==
 ; =====================================================
 add:
-; --- Block players from going out of bounds above the tunnel
+; --- Block players from going out of bounds above the end tunnel
 {
 	"classname" "env_physics_blocker"
 	"origin" "-67 7411 2580"
