--- a/cfg/stripper/maps/c13m4_cutthroatcreek.cfg
+++ b/cfg/stripper/maps/c13m4_cutthroatcreek.cfg
@@ -20,12 +20,12 @@ filter:
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
-; --- Remove item spawns through the map
+; --- Remove item spawns throughout the map
 filter:
 {
 	"classname" "weapon_item_spawn"
 }
-; --- Add 2 guaranteed pill spawns by the tank drop
+; --- Add 2 guaranteed pill spawns by the tank at the drop
 add:
 {
 	"classname" "weapon_pain_pills_spawn"
